--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html{
 
 .padding{
   padding-bottom: 2rem;
-  padding-top: 1rem
+  padding-top: 1rem;
 }
 .light {
   width: 75%;
@@ -273,7 +273,8 @@ html{
 }
 
 .groomimg-title{
-  font-size: 20px !important;
+  font-size: 20p;
 }
+
 
 }
